@@ -1,15 +1,13 @@
 
-
-#INCLUDES =						\
-#        -DGNOMELOCALEDIR=\""$(datadir)/locale"\"        \
-#	-DG_LOG_DOMAIN=\"cal-client\"			\
-#	-I$(srcdir) -I$(top_srcdir) 			\
-#	-I. 						\
-#	-I.. 						\
-#	-I$(top_builddir)				\
-#        -I$(includedir)                                 \
-#        $(GNOME_INCLUDEDIR)
-
+INCLUDES =						\
+        -DGNOMELOCALEDIR=\""$(datadir)/locale"\"        \
+	-DG_LOG_DOMAIN=\"cal-client\"			\
+	-I$(srcdir) -I$(top_srcdir) 			\
+	-I. 						\
+	-I.. 						\
+	-I$(top_builddir)				\
+        -I$(includedir)                                 \
+        $(GNOME_INCLUDEDIR)
 
 lib_LTLIBRARIES = libcalutil.la
 
